1.1.1 (unreleased)
==================

- Nothing changed yet.


1.1.0 (2022-09-13)
==================

**New features**

- Add support for managing files in buckets other than default (#46)


1.0.0 (2021-04-22)
==================

**Breaking changes**

- Drop support for Python 2.6, Python 2.7 and Python 3.5 (#42)
- Add support for Python 3.6+ (#42)

**Bug fixes**

- Fix Pyramid 2 support (#44)
- Allow empty tuple for ANY extension (#33)

**Internal changes**

- Move from Travis to Github workflows
- testing: Add ``DummyFileStorage.url`` (#22)


0.3.1 (2020-06-04)
==================

**Bug fixes**

- Fix overriding of Content-Type in S3 backend


0.3.0 (2019-05-21)
==================

- Merge file upload and acl update requests with the Google Cloud backend. (#36)


0.2.0 (2018-11-23)
==================

**New features**

- Add support for Google Cloud Storage backend.
- Add .xlsx in documents extensions

**Internal changes**

- Update test matrix on CI

0.1.2 (2016-02-18)
==================

**Bug fixes**

- Ignore extra keyword args for the local storage backend (for example S3
  headers or ACL)

0.1.1 (2016-02-04)
==================

- Do not require port setting for S3 (fixes #15)

0.1.0 (2015-11-30)
==================

- Bucket name is now read from ``storage.aws.bucket_name`` setting, as stated
  in documentation.
- ACL is now read from ``storage.aws.acl`` setting, as stated in documentation.
- Added new connection options for S3 (fixes #8)

0.0.8 (2014-10-1)
==================

Allow all extensions with 'any' group

0.0.7 (2014-06-13)
==================

Fixing bug for detecting extensions such as csv

0.0.5 (2013-12-20)
==================

Added save_file and save_filename methods

0.0.4 (2013-12-20)
==================

Added S3 functionality

0.0.3 (2013-12-18)
==================

Added PDF to document extensions list

0.0.2 (2013-12-17)
==================

Version bump to include setup.cfg and sphinx conf changes.