@@ -13,10 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        toxenv: [py36, py37, py38, py39, flake8]
+        toxenv: [py37, py38, py39, py310, py311, flake8]
         include:
-          - toxenv: py36
-            python-version: "3.6"
           - toxenv: py37
             python-version: "3.7"
           - toxenv: py38
@@ -25,6 +23,10 @@ jobs:
             python-version: "3.8"
           - toxenv: py39
             python-version: "3.9"
+          - toxenv: py310
+            python-version: "3.10"
+          - toxenv: py311
+            python-version: "3.11"
 
     steps:
       - uses: actions/checkout@v2
