@@ -1,5 +1,5 @@
 [tox]
-envlist = py36,py37,py38,py39,flake8
+envlist = py37,py38,py39,py310,py311,flake8
 skip_missing_interpreters = True
 
 [testenv]
