@@ -1,7 +1,9 @@
 1.1.1 (unreleased)
 ==================
 
-- Nothing changed yet.
+**Internal changes**
+
+- Drop Python 3.6 from test suite and add 3.10 and 3.11
 
 
 1.1.0 (2022-09-13)
